update demo
